--- a/DATN/Views/Auths/TrangChu.cshtml
+++ b/DATN/Views/Auths/TrangChu.cshtml
@@ -99,7 +99,7 @@
 
   </head>
   <body>
-    <h1>ChatGPT Demo</h1>
+    <h1>ChatGPT</h1>
     <form>
       <label for="question">Bạn muốn hỏi gì?</label>
       <input type="text" id="question" name="question" />
