--- a/DATN/Views/Auths/TrangChu.cshtml
+++ b/DATN/Views/Auths/TrangChu.cshtml
@@ -3,9 +3,8 @@
 <div class="row">
 
     <div class="d-sm-flex align-items-center justify-content-between mb-4">
-        <h1 class="h3 mb-0 text-gray-800">Dashboard</h1>
-        <a href="#" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm">
-            <i class="fas fa-download fa-sm text-white-50"></i> Generate Report
+        <a asp-action="ExportUserToExcel" asp-controller="NguoiDungs" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm">
+            <i class="fas fa-download fa-sm text-white-50"></i> Tải báo cáo tài chính
         </a>
     </div>
     <!-- Earnings (Monthly) Card Example -->
@@ -20,7 +19,6 @@
                         <div class="h5 mb-0 font-weight-bold text-gray-800">@ViewBag.TongKhuVuc</div>
                     </div>
                     <div class="col-auto">
-                        <i class="fas fa-calendar fa-2x text-gray-300"></i>
                     </div>
                 </div>
             </div>
@@ -39,7 +37,6 @@
                         <div class="h5 mb-0 font-weight-bold text-gray-800">@ViewBag.TongTienMuaSam</div>
                     </div>
                     <div class="col-auto">
-                        <i class="fas fa-dollar-sign fa-2x text-gray-300"></i>
                     </div>
                 </div>
             </div>
@@ -58,7 +55,6 @@
                         <div class="h5 mb-0 font-weight-bold text-gray-800">@ViewBag.TongTienBanSanPham</div>
                     </div>
                     <div class="col-auto">
-                        <i class="fas fa-dollar-sign fa-2x text-gray-300"></i>
                     </div>
                 </div>
             </div>
@@ -111,7 +107,6 @@
       <span></span>
       <span></span>
     </div>
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script>
       $(document).ready(function () {
         $("#submit-btn").on("click", function (e) {
@@ -131,7 +126,7 @@
               headers: {
                 "Content-Type": "application/json",
                 Authorization:
-                  "Bearer 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",
+                  "Bearer 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",
               },
               data: JSON.stringify({
                 model: "gpt-3.5-turbo",
