--- a/DATN/Views/CoSoNuoiTrongs/DanhSachCoSoNuoiTrong.cshtml
+++ b/DATN/Views/CoSoNuoiTrongs/DanhSachCoSoNuoiTrong.cshtml
@@ -40,8 +40,8 @@
                 <thead>
                     <tr>
                         <th>Địa chỉ</th>
-                        <th>Diện tích</th>
-                        <th>Diện tích đã sử dụng</th>
+                        <th>Diện tích(m2)</th>
+                        <th>Diện tích đã sử dụng(m2)</th>
                         <th>Số người ở cơ sở</th>
                         <th>Chức năng</th>
                     </tr>
