--- a/DATN/Views/CoSoNuoiTrongs/Sua.cshtml
+++ b/DATN/Views/CoSoNuoiTrongs/Sua.cshtml
@@ -20,7 +20,7 @@
                 <span asp-validation-for="DiaChi" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="DienTich" class="control-label">Diện tích</label>
+                <label asp-for="DienTich" class="control-label">Diện tích(m2)</label>
                 <input asp-for="DienTich" class="form-control" />
                 <span asp-validation-for="DienTich" class="text-danger"></span>
             </div>
