--- a/DATN/Views/KhoVatTus/ThemMoiKhoVatTu.cshtml
+++ b/DATN/Views/KhoVatTus/ThemMoiKhoVatTu.cshtml
@@ -22,5 +22,5 @@
     </div>
 </div>
 <div>
-    <a asp-action="DanhSachSanKhoVatTu">Quay lại</a>
+    <a asp-action="DanhSachKhoVatTu">Quay lại</a>
 </div>
