--- a/DATN/Views/KhuVucs/DanhSachKhuVuc.cshtml
+++ b/DATN/Views/KhuVucs/DanhSachKhuVuc.cshtml
@@ -39,7 +39,7 @@
                 <thead>
                     <tr>
                         <th>Tên khu vực</th>
-                        <th>Diện tích</th>
+                        <th>Diện tích(m2)</th>
                         <th>Sản phẩm</th>
                         <th>Cơ sở nuôi trồng</th>
                         <th>Hình ảnh</th>
