--- a/DATN/Views/NguoiDungs/ChiTiet.cshtml
+++ b/DATN/Views/NguoiDungs/ChiTiet.cshtml
@@ -120,11 +120,11 @@
 
                             <div class="row gx-3 mb-3">
                                 <div class="col-md-6">
-                                    <label class="small mb-1" for="inputEmailAddress">Diện tích cơ sở nuôi trồng</label>
+                                    <label class="small mb-1" for="inputEmailAddress">Diện tích cơ sở nuôi trồng(m2)</label>
                                     <p class="form-control" id="inputUsername" type="text">@Model.CoSoNuoiTrong.DienTich</p>
                                 </div>
                                 <div class="col-md-6">
-                                    <label class="small mb-1" for="inputEmailAddress">Diện tích đã sử dụng</label>
+                                    <label class="small mb-1" for="inputEmailAddress">Diện tích đã sử dụng(m2)</label>
                                     <p class="form-control" id="inputUsername" type="text">@Model.CoSoNuoiTrong.DienTichDaSuDung</p>
                                 </div>
                             </div>
@@ -141,11 +141,11 @@
                             </div>
                             <div class="row gx-3 mb-3">
                                 <div class="col-md-6">
-                                    <label class="small mb-1" for="inputEmailAddress">Số tiền đã chi tiêu</label>
+                                    <label class="small mb-1" for="inputEmailAddress">Số tiền đã chi tiêu(đ)</label>
                                     <p class="form-control" id="inputUsername" type="text">@ViewBag.TongChiTieu</p>
                                 </div>
                                 <div class="col-md-6">
-                                    <label class="small mb-1" for="inputEmailAddress">Doanh số cơ sở nuôi trồng</label>
+                                    <label class="small mb-1" for="inputEmailAddress">Doanh số cơ sở nuôi trồng(đ)</label>
                                     <p class="form-control" id="inputUsername" type="text">@ViewBag.TongDoanhSo</p>
                                 </div>
                             </div>
