--- a/DATN/Views/NguoiDungs/DanhSachNguoiDung.cshtml
+++ b/DATN/Views/NguoiDungs/DanhSachNguoiDung.cshtml
@@ -49,8 +49,8 @@
                         <th>Tên người dùng</th>
                         <th>Email</th>
                         <th>Giới tính</th>
-                        <th>Diện tích cơ sở nuôi trồng</th>
-                        <th>Diện tích đã sử dụng</th>
+                        <th>Diện tích cơ sở nuôi trồng(m2)</th>
+                        <th>Diện tích đã sử dụng(m2)</th>
                         <th>Địa chỉ</th>
                         <th>Khu vực quản lý</th>
                         <th>Vật tư đã mua</th>
