--- a/DATN/Views/NhatKyBanSanPhams/DanhSachNhatKyBanSanPham.cshtml
+++ b/DATN/Views/NhatKyBanSanPhams/DanhSachNhatKyBanSanPham.cshtml
@@ -40,8 +40,8 @@
                 <thead>
                     <tr>
                         <th>Tên sản phẩm</th>
-                        <th>Số lượng bán</th>
-                        <th>Giá bán</th>
+                        <th>Số lượng bán(kg)</th>
+                        <th>Giá bán(đ)</th>
                         <th>Ngày bán</th>
                         <th>Mã QR</th>
                         <th>Chức năng</th>
