--- a/DATN/Views/NhatKyMuaSams/DanhSachNhatKyMuaSam.cshtml
+++ b/DATN/Views/NhatKyMuaSams/DanhSachNhatKyMuaSam.cshtml
@@ -41,7 +41,7 @@
                         <th>Tên vật tư</th>
                         <th>Số lượng</th>
                         <th>Số lượng đã sử dụng</th>
-                        <th>Giá</th>
+                        <th>Giá(đ)</th>
                         <th>Xuất xứ</th>
                         <th>Kho lưu trữ</th>
                         <th>Ngày sản xuất</th>
