--- a/DATN/Views/NhatKyThuHoachs/DanhSachNhatKyThuHoach.cshtml
+++ b/DATN/Views/NhatKyThuHoachs/DanhSachNhatKyThuHoach.cshtml
@@ -39,8 +39,8 @@
                 <thead>
                     <tr>
                         <th>Tên sản phẩm</th>
-                        <th>Số lượng thu hoạch</th>
-                        <th>Số lượng đã bán</th>
+                        <th>Số lượng thu hoạch(kg)</th>
+                        <th>Số lượng đã bán(kg)</th>
                         <th>Ngày thu hoạch</th>
                         <th>Chức năng</th>
                     </tr>
