--- a/DATN/Views/NhatKyBanSanPhams/Sua.cshtml
+++ b/DATN/Views/NhatKyBanSanPhams/Sua.cshtml
@@ -11,12 +11,12 @@
         <form asp-action="Sua" method="post" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="SoLuong" class="control-label">Số lượng bán</label>
+                <label asp-for="SoLuong" class="control-label">Số lượng bán(kg)</label>
                 <input asp-for="SoLuong" class="form-control" />
                 <span asp-validation-for="SoLuong" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="GiaBan" class="control-label">Giá bán</label>
+                <label asp-for="GiaBan" class="control-label">Giá bán(đ)</label>
                 <input asp-for="GiaBan" class="form-control" />
                 <span asp-validation-for="GiaBan" class="text-danger"></span>
             </div>
