--- a/DATN/Views/NhatKyBanSanPhams/ThemMoiNhatKyBanSanPham.cshtml
+++ b/DATN/Views/NhatKyBanSanPhams/ThemMoiNhatKyBanSanPham.cshtml
@@ -20,12 +20,12 @@
                 <p id="sl"></p>
             </div>
             <div class="form-group">
-                <label asp-for="SoLuong" class="control-label">Số lượng bán sản phẩm</label>
+                <label asp-for="SoLuong" class="control-label">Số lượng bán sản phẩm(kg)</label>
                 <input asp-for="SoLuong" class="form-control" />
                 <span asp-validation-for="SoLuong" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="GiaBan" class="control-label">Giá bán sản phẩm</label>
+                <label asp-for="GiaBan" class="control-label">Giá bán sản phẩm(đ)</label>
                 <input asp-for="GiaBan" class="form-control" />
                 <span asp-validation-for="GiaBan" class="text-danger"></span>
             </div>
