--- a/DATN/Views/NhatKyMuaSams/ThemMoiNhatKyMuaSam.cshtml
+++ b/DATN/Views/NhatKyMuaSams/ThemMoiNhatKyMuaSam.cshtml
@@ -36,7 +36,7 @@
                 <span asp-validation-for="SoLuong" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Gia" class="control-label">Giá</label>
+                <label asp-for="Gia" class="control-label">Giá(đ)</label>
                 <input asp-for="Gia" class="form-control" />
                 <span asp-validation-for="Gia" class="text-danger"></span>
             </div>
