--- a/DATN/Views/NhatKyThuHoachs/Sua.cshtml
+++ b/DATN/Views/NhatKyThuHoachs/Sua.cshtml
@@ -11,12 +11,12 @@
         <form asp-action="Sua" method="post" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="SoLuongThuHoach" class="control-label">Số lượng thu hoạch</label>
+                <label asp-for="SoLuongThuHoach" class="control-label">Số lượng thu hoạch(kg)</label>
                 <input asp-for="SoLuongThuHoach" class="form-control" />
                 <span asp-validation-for="SoLuongThuHoach" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="SoLuongDaBan" class="control-label">Đã bán</label>
+                <label asp-for="SoLuongDaBan" class="control-label">Đã bán(kg)</label>
                 <input asp-for="SoLuongDaBan" class="form-control" disabled/>
                 <span asp-validation-for="SoLuongDaBan" class="text-danger"></span>
             </div>
