--- a/DATN/Views/NhatKyThuHoachs/ThemMoiNhatKyThuHoach.cshtml
+++ b/DATN/Views/NhatKyThuHoachs/ThemMoiNhatKyThuHoach.cshtml
@@ -19,7 +19,7 @@
                 <span asp-validation-for="MaKhuVuc" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="SoLuongThuHoach" class="control-label">Số lượng thu hoạch</label>
+                <label asp-for="SoLuongThuHoach" class="control-label">Số lượng thu hoạch(kg)</label>
                 <input asp-for="SoLuongThuHoach" class="form-control" />
                 <span asp-validation-for="SoLuongThuHoach" class="text-danger"></span>
             </div>
